src/index.css
@import "tailwindcss";

*,
*::before,
*::after {
  box-sizing: border-box;
}

:root {
  --primary-light-background: rgb(241, 236, 236);
  --primary-dark-background: rgba(233, 154, 102, 0.957);
  --primary-text-color: rgb(221, 214, 214);

  --primary-font-size: clamp();
  --secondary-font-size: clamp();

  /* border radius and apperance settings */
  --borderRadius-full: 624.9375rem;
  --borderRadius-large: 1em;
  --borderRadius-medium: 0.375rem;
  --borderRadius-small: 0.1875rem;
  --borderWidth-thick: 0.125rem;
  --borderWidth-thicker: 0.25rem;
  --borderWidth-thin: 0.0625rem;
  --outline-focus-offset: -0.125rem;
  --outline-focus-width: 0.125rem;
  --borderRadius-default: var(--borderRadius-medium);
  --borderWidth-default: var(--borderWidth-thin);
  --boxShadow-thick: inset 0 0 0 var(--borderWidth-thick);
  --boxShadow-thicker: inset 0 0 0 var(--borderWidth-thicker);
  --boxShadow-thin: inset 0 0 0 var(--borderWidth-thin);

  /* Gap */
  --gap-full: ;
  --gap-large: ;
  --gap-medium: ;
  --gap-small: ;

  --primary-border: 0.7563px solid white;
  --primary-padding: clamp(5px, 7px, 8.5px);
  --card-border-radius: clamp(1rem, 1.5rem, 1.8rem);

  --sidebar-links-block-padding: clamp(0.5rem, 0.8rem, 1rem);
  --sidebar-links-inline-padding: clamp(0.4rem, 0.8rem, 1rem);
  --sidebar-links-bg-color: rgb(108, 102, 98);
  --sidebar-border: 0;
  --sidebar-border-radius: clamp(30px, 45px, 52px);

  --vertical-boxes-bg-color: hsla(19, 91%, 25%, 0.333);
  --vertical-boxes-margin: clamp(5px, 7px, 8px);
  --vertical-boxes-border-radius: clamp(6px, 10px, 13px);
  --vertical-boxes-border: 1px solid white;
  --vertical-boxes-inline-padding: clamp(3px, 6px, 8px);
  --vertical-boxes-block-padding: clamp(3px, 6px, 8px);

  --center-verticalbox-card-inline-padding: clamp(6px, 10px, 13px);

  --tags-primary-inline-padding: clamp(4px, 6px, 7px);
  --tags-primary-block-padding: clamp(2px, 1%, 3px);
  --tag-links-wrapper-padding: clamp(2px, 3px, 3.5px);
  --tag-links-wrapper-gap: clamp(5px, 7px, 8px);
  --tag-link-btn-border: 1px solid rgb(181, 168, 168);
  --tag-link-btn-border-radius: clamp(6px, 10px, 13px);
  --tag-link-btn-inline-padding: clamp(5px, 7px, 8.5px);
  --tag-link-btn-block-padding: clamp(2px, 3.5px, 5px);
}

#root {
  height: 100svh;
  width: 100svw;
  overflow-x: hidden;
}

body {
  background: var(--primary-dark-background);
  background-image: url(./Assets/portimage.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  margin-inline: auto;
  display: block;
  height: 100svh;
  min-width: 100svw;
  color: var(--primary-text-color);
}

img {
  border-radius: var(--borderRadius-medium);
}

.primary-border-radius {
  border-radius: var(--borderRadius-medium);
}

.main-wrapper {
  padding: clamp(2px, 3px, 5px);
  gap: clamp(2px, 3px, 4px);
  height: 100%;
  width: 100%;
  display: grid;
  grid-template-columns: min-content 1fr minmax(auto, 25%);
}

.overlay {
  border-image:
    linear-gradient(hsla(18, 75%, 57%, 0)) fill 0.5;
}

.left {
  border-top-left-radius: var(--borderRadius-medium);
  border-bottom-left-radius: var(--borderRadius-medium);
  border-right: var(--primary-border);
  padding-inline-end: var(--vertical-boxes-inline-padding);
}

.main-content-column{
  scrollbar-width: none;
}

.main-content-column::-webkit-scrollbar {
  display: none;
}

.center {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: clamp(1rem, 4%, 1.5rem);
  height: 100%;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

.right {
  height: 100%;
  display: grid;
  grid-template-columns: minmax(auto, 60vh);
  border-top-right-radius: var(--borderRadius-medium);
  border-bottom-right-radius: var(--borderRadius-medium);
}

.vertical-boxes-paddings {
  padding-inline: var(--vertical-boxes-inline-padding);
  padding-block: var(--vertical-boxes-block-padding);
}

.nav-links {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: row;
  gap: 1rem;
  padding-block: var(--sidebar-links-block-padding);
  padding-inline: var(--sidebar-links-inline-padding);
  text-transform: uppercase;
  transition: all 0.5s ease;
  letter-spacing: 1px;
  border: var(--sidebar-border);
  cursor: pointer;
  box-shadow: rgb(0 0 0 / 5%) 0 0 8px;
  width: 100%;
}

.nav-links:hover {
  background-color: hsla(260, 33%, 93%, 0.528);
  color: var(--primary-dark-background);
  border-radius: var(--borderRadius-medium);
}

.nav-link-icon {
  height: clamp(1rem, 1.5rem, 2rem);
  width: clamp(1rem, 1.4rem, 1.8rem);
}

.nav-links-wrapper {
  gap: clamp(3px, 5px, 8px);
  display: grid;
  border-radius: var(--borderRadius-medium);
}

.card-optional-links-wrapper {
  gap: var(--tag-links-wrapper-gap)
}

.card-wrapper>* {
  backdrop-filter: blur(20px);
  width: 100%;
  padding-block: var(--tags-primary-block-padding);
  border-radius: var(--borderRadius-medium);
}

.card-wrapper>*:not(:first-child) {
  padding-inline: var(--tags-primary-inline-padding);
}

.card-padding {
  padding-inline: clamp(0.2rem, 0.3rem, 5rem);
  padding-block: clamp(0.2rem, 0.3rem, 0.5rem);
}

.card-image {
  display: block;
  margin: 0 auto;
}

.card-description-box {
  max-height: 30%;
}

.tags-link-btn-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  gap: var(--tag-links-wrapper-gap);
}

.tags-link-btn {
  color: inherit;
  display: flex;
  height: full;
  border: var(--tag-link-btn-border);
  border-radius: var(--borderRadius-medium);
  padding-inline: var(--tag-link-btn-inline-padding);
  padding-block: var(--tag-link-btn-block-padding);
}

/* -----------profile-image----------- */
.profile-wrapper> :first-child {
  align-self: center;
  margin-block-start: 20px;
}

.profile-image-primary-wrapper {
  aspect-ratio: 1.1;
  width: clamp(80px, 25vw, 240px);
  border-radius: 50%;
  overflow: hidden;
  display: inline-block;
}

.profile-image-secondary-wrapper {
  width: 100%;
  height: 100%;
  display: block;
}

.profile-image {
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  border-radius: 0;
}

/* ----------skills section------------------ */

.skills-container {
  display: flex;
  flex-wrap: wrap;
  gap: 7px;
}

.skills-btn {
  border: var(--primary-border);
  border-radius: var(--borderRadius-medium);
  padding: var(--tag-link-btn-inline-padding);
}

.skills-btn:hover {
  color: var(--primary-dark-background);
}

.skillCard-wrapper {
  max-width: fit-content;
  max-height: 375px;
}

.card-settings {
  max-width: 480px;
  max-height: 430px;
  border: 1px solid hsl(0, 0%, 100%, 0.3);
  box-shadow: inset 0 0 8px 1px hsl(0, 0%, 7% / 0.1);
  border-radius: var(--borderRadius-medium);
  border-width: var(--borderWidth-thin);
}

.info>*:hover,
.about-ul-wrapper>*:hover {
  backdrop-filter: blur(20px);
  border-radius: var(--borderRadius-medium);
  color: var(--primary-dark-background);
  border: 1px solid hsl(0, 0%, 100%, 0.3);
  border-width: var(--borderWidth-thin);
}

.tab-tracker-heading {
  border: solid hsl(0, 0%, 100%, 0.3);
  border-width: var(--borderWidth-thin);
}

/* common classes css */
.bg-blur {
  backdrop-filter: blur(20px);
}

@media (max-width: 1023px) {
  .left {
    display: flex;
  }

  .center {
    grid-template-columns: 1fr;
    margin-inline: auto;
  }

  .projects-section-wrapper>* {
    place-self: center;
  }

  .right {
    position: absolute;
    top: 0;
    right: 0;
    max-width: 60vw;
    backdrop-filter: blur(20px);
    color: rgb(206, 206, 206);
  }

  .nav-link-labels {
    display: none;
    height: 30px;
    width: 30px;
  }

  .main-wrapper {
    grid-template-columns: min-content 1fr;
  }

  .card-wrapper {
    max-height: 500px;
  }

}

